(BSR)[PRO] fix: offer title overlap

--- a/pro/src/components/IndividualOfferLayout/IndividualOfferLayout.module.scss
+++ b/pro/src/components/IndividualOfferLayout/IndividualOfferLayout.module.scss
@@ -33,8 +33,6 @@
   display: flex;
   flex-direction: column;
   gap: var(--size-spacing-s);
-  margin-top: rem.torem(-32px);
-  margin-bottom: rem.torem(64px);
 
   @media screen and (min-width: size.$tablet) {
     flex-direction: row;
